full-moon/tests/cases/fail/parser/call-3/error_display.snap
---
source: full-moon/tests/fail_cases.rs
assertion_line: 56
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/cases/fail/parser/call-3
---
error[ast]: unexpected token `(`. ( (expected `)` to close function call)
  ┌─ source.lua:1:5
  │
1 │ call("hello", "world"
  │     ^


